# crucible

./: .editorconfig  .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  flake.nix
.github/: commitlint.config.cjs
apps/attestation-relay/: Cargo.toml  README.md
apps/attestation-relay/src/: config.rs  dsse.rs  error.rs  fulcio.rs  journal.rs  lib.rs  main.rs  predicate.rs  rekor.rs  server.rs  service.rs  signer.rs  statement.rs  verify.rs
apps/attestation-relay/tests/: self_hosted_rekor.rs  threat_model.rs
apps/ide-plugins/zed/: Cargo.toml  README.md  acp-bridge.toml  extension.toml
apps/ide-plugins/zed/src/: lib.rs
apps/twin-runtime/: Cargo.toml  README.md
apps/twin-runtime-self-host/: Cargo.toml  README.md
apps/twin-runtime-self-host/src/: cgroups.rs  firecracker.rs  main.rs  network.rs  pool.rs  provider.rs  zfs.rs
apps/twin-runtime-self-host/tests/: integration.rs
apps/twin-runtime/crates/twin-runtime-attest/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-attest/src/: lib.rs
apps/twin-runtime/crates/twin-runtime-egress/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-egress/src/: lib.rs  mitmproxy.rs  tetragon.rs
apps/twin-runtime/crates/twin-runtime-fs/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-fs/src/: lib.rs
apps/twin-runtime/crates/twin-runtime-lifecycle/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-lifecycle/src/: events.rs  heartbeat.rs  lib.rs
apps/twin-runtime/crates/twin-runtime-proto/: Cargo.toml  build.rs
apps/twin-runtime/crates/twin-runtime-proto/src/: convert.rs  lib.rs
apps/twin-runtime/crates/twin-runtime-sandbox/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-sandbox/src/: e2b.rs  lib.rs  raw_firecracker.rs  registry.rs
apps/twin-runtime/crates/twin-runtime-server/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-server/src/: config.rs  main.rs  service.rs
apps/twin-runtime/crates/twin-runtime-shim/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-shim/benches/: cmd_parse_throughput.rs
apps/twin-runtime/crates/twin-runtime-shim/src/: bpf_lsm.rs  cmd_parse.rs  corpus.rs  gate.rs  lib.rs  proposal.rs  seccomp_unotify.rs  tetragon.rs
apps/twin-runtime/crates/twin-runtime-shim/src/gate/: scope.rs
apps/twin-runtime/crates/twin-runtime-shim/tests/: pocket_os_scenario.rs  property_50k.rs
apps/twin-runtime/crates/twin-runtime-staleness/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-staleness/src/: lib.rs
apps/twin-runtime/crates/twin-runtime-wasm/: Cargo.toml
apps/twin-runtime/crates/twin-runtime-wasm/src/: capabilities.rs  lib.rs  limits.rs  runner.rs
apps/twin-runtime/crates/twin-runtime-wasm/tests/: containment.rs
cth/: README.md
docs/: ASSETS.md  CRUCIBLE-MERGED.md  PHASE-1-REPORT.md  PHASE-2-REPORT.md  (+9 more)
infra/oss-corpus-bootstrap/: README.md  pyproject.toml
infra/oss-corpus-bootstrap/src/crucible_oss_bootstrap/: __init__.py  cli.py  compat_spec.py  license_filter.py  pipeline.py  seeds.py
infra/oss-corpus-bootstrap/tests/: test_pipeline.py
libs/memory-spec/py/: pyproject.toml
libs/memory-spec/py/crucible_memory_spec/: __init__.py  errors.py  types.py
libs/memory-spec/py/tests/: test_types.py
libs/sandbox-spec/: Cargo.toml
libs/sandbox-spec/src/: conformance.rs  lib.rs  spec_hash.rs
libs/sandbox-spec/tests/: mock_passes_conformance.rs
libs/sdk-py/: README.md  pyproject.toml
libs/sdk-py/crucible_sdk/: __init__.py  twin.py  types.py
libs/sdk-py/tests/: test_types.py
libs/sdk-rs/: Cargo.toml
libs/sdk-rs/src/: lib.rs  twin.rs  types.rs
services/distiller/: README.md  pyproject.toml
services/distiller/src/crucible_distiller/: __init__.py  cli.py  compat_types.py  pipeline.py  types.py
services/distiller/src/crucible_distiller/adapters/: __init__.py  adr_file.py  base.py  confluence.py  github_pr.py  github_squash.py  incident.py  lint_config.py  notion.py  slack_incidents.py
services/distiller/src/crucible_distiller/admission/: __init__.py  amac.py  client.py
services/distiller/src/crucible_distiller/confidence/: __init__.py  cross_source.py  platt.py
services/distiller/src/crucible_distiller/drift/: __init__.py  detector.py
services/distiller/src/crucible_distiller/extractor/: __init__.py  mem0_hierarchical.py  prompts.py  schema.py
services/distiller/src/crucible_distiller/judge/: __init__.py  adversarial_corpus.py  deterministic.py  llm_judge.py
services/distiller/tests/: test_cross_tenant_isolation.py  test_drift_detector.py  test_e2e_pr_corpus.py  test_extractor.py  test_judge_corpus.py
services/memory-router/cartographer/: README.md  pyproject.toml
services/memory-router/cartographer/src/crucible_cartographer/: __init__.py  agents_md.py  cli.py  compat_distiller.py  scanner.py  stack_detect.py
services/memory-router/cartographer/tests/: test_cold_start.py  test_stack_detect.py
services/twin-runtime/tape_driver/scrubber/: README.md  pyproject.toml
services/twin-runtime/tape_driver/scrubber/crucible_scrubber/: __init__.py  app.py  audit.py  ff3.py  operators.py  pipeline.py  recognizers.py
services/twin-runtime/tape_driver/scrubber/tests/: corpus.py  test_pipeline.py  test_recall_corpus.py
verifiers/python/: README.md  pyproject.toml
verifiers/python/crucible_verify_python/: __init__.py  __main__.py  audit.py  cli.py  diff.py  schema.py
verifiers/python/crucible_verify_python/tiers/: __init__.py  tier0_mutation.py  tier1_pbt.py  tier2_contract.py  tier3_proof.py  tier4_honest_ci.py
verifiers/python/tests/: conftest.py  test_schema_roundtrip.py  test_tier0_mutation.py  test_tier1_hypothesis.py  test_tier2_schemathesis.py
verifiers/rust/: Cargo.toml  README.md
verifiers/rust/src/: audit.rs  diff.rs  lib.rs  main.rs  schema.rs
verifiers/rust/src/tiers/: mod.rs  tier0_mutation.rs  tier1_pbt.rs  tier2_contract.rs  tier3_proof.rs  tier4_honest_ci.rs
verifiers/rust/tests/: audit.rs  schema_roundtrip.rs  tier0_mutation.rs
verifiers/rust/tests/fixtures/: cargo_mutants_outcomes.json
verifiers/rust/tests/fixtures/sample-crate/: Cargo.toml
verifiers/rust/tests/fixtures/sample-crate/src/: lib.rs
(+684 files in other folders)
