[project]
name = "crucible-oss-bootstrap"
version = "0.5.0"
description = "Crucible cold-start OSS corpus → per-stack default bundles"
requires-python = ">=3.11"
license = { file = "../../LICENSE" }
authors = [{ name = "Crucible" }]
dependencies = [
    "httpx>=0.27,<1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
distill = ["crucible-distiller @ file://../../services/distiller"]
spec    = ["crucible-memory-spec @ file://../../libs/memory-spec/py"]
test    = ["pytest>=8"]

[project.scripts]
crucible-oss-bootstrap = "crucible_oss_bootstrap.cli:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible_oss_bootstrap"]
