[project]
name = "crucible-sdk"
version = "2026.6.0-phase1"
description = "Crucible Agent SDK — twin.* API surface for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The Crucible Authors" }]
dependencies = [
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "hypothesis>=6.150",
  "mypy>=1.10",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible_sdk"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"
