[package]
name = "crucible-sdk"
version = "2026.6.0-phase2"
edition = "2021"
rust-version = "1.82"
description = "Crucible Agent SDK — twin.* API surface for Rust"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = "1.5"
