[package]
name = "crucible-zed"
version = "2026.06.0-phase7"
edition = "2021"
publish = false
description = "Crucible extension for Zed via the Agent Client Protocol."
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
zed_extension_api = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
