[project]
name = "crucible-cartographer"
version = "0.5.0"
description = "Crucible onboarding cartographer (Phase 5)"
requires-python = ">=3.11"
license = { file = "../../../LICENSE" }
authors = [{ name = "Crucible" }]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-languages>=1.10",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
distill = ["crucible-distiller @ file://../../../services/distiller"]
spec    = ["crucible-memory-spec @ file://../../../libs/memory-spec/py"]
test    = ["pytest>=8"]

[project.scripts]
crucible-cartographer = "crucible_cartographer.cli:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible_cartographer"]
