[package]
name = "twin-runtime-attest"
description = "In-toto attestation emission for the Crucible Twin Runtime"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
twin-runtime-shim = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
fs-err = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
