[package]
name = "twin-runtime-sandbox"
description = "SandboxProvider implementations for the Crucible Twin Runtime (E2B + raw-Firecracker stub)"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
crucible-sandbox-spec = { workspace = true, features = ["conformance"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
