[package]
name = "twin-runtime-shim"
description = "The Crucible destructive-op gate — three-layer enforcement (cmd-parse + seccomp_unotify + BPF-LSM + Tetragon)"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
crucible-sandbox-spec = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
shell-words = "1.1"
regex = "1.11"
once_cell = "1"
serde_yaml = { workspace = true }

# Linux-only dependencies for layers 2 and 3. cfg-gated so the workspace
# `cargo check` works on macOS / Windows developer hosts.
[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
libc = { workspace = true }
caps = { workspace = true }
landlock = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
arbitrary = { workspace = true }
tokio = { workspace = true }
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "cmd_parse_throughput"
harness = false
required-features = []
