[project]
name = "crucible-scrubber"
version = "2026.6.0-phase3"
description = "Crucible PII scrub service — Presidio + spaCy + FF3-1 + deterministic pseudonymisation."
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Crucible" }]
readme = "README.md"

# Pins from the Phase 3 currency check (May 2026):
#  - Presidio 2.2.362 is the current line. The hash operator now uses a random
#    salt by default; we ship our own deterministic operator (DETERMINISTIC).
#  - spaCy pinned <3.9 so an unannounced v4 prerelease cannot land.
#  - en_core_web_lg is the default NER model; en_core_web_trf or a HuggingFace
#    clinical de-identifier is wired via TransformersNlpEngine for HIPAA tapes.
#  - ff3 1.0.3 is mysto/python-fpe (FF3-1 only; FF3 is removed in SP 800-38G
#    Rev. 1 2PD 2025-02-03 — see [[adr-007-hoverfly-tape-replay]] alignment).
#  - cryptography is the AES backend FF3-1 builds on (also our HKDF source).
dependencies = [
    "presidio-analyzer==2.2.362",
    "presidio-anonymizer==2.2.362",
    "spacy>=3.8,<3.9",
    "ff3==1.0.3",
    "cryptography>=42",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "orjson>=3.10",
]

[project.optional-dependencies]
hipaa = [
    # The HIPAA NLP engine swap-in is a TransformersNlpEngine pointed at
    # StanfordAIMI/stanford-deidentifier-base. Heavier; gated behind extra.
    "transformers>=4.45",
    "torch>=2.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "httpx>=0.27",
]

[project.scripts]
crucible-scrubber = "crucible_scrubber.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible_scrubber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "presidio: tests that require the Presidio runtime (skip if missing).",
    "hipaa: tests that require the optional clinical NLP engine.",
    "slow: heavier tests (e.g., 1000-sample corpus).",
]
